--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/SS13HUB/ss13-projects-data/issues"
   },
-  "homepage": "https://github.com/SS13HUB/ss13-projects-data#readme"
+  "homepage": "https://github.com/SS13HUB/ss13-projects-data#readme",
+  "dependencies": {
+    "d3": "^7.4.4",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "process": "^0.11.10"
+  }
 }
